--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 </head>
 <body>
     <div class="gallery">
-        <img src="https://source.unsplash.com/600x400/?mountain" alt="Mountain">
-        <img src="https://source.unsplash.com/600x400/?forest" alt="Forest">
-        <img src="https://source.unsplash.com/600x400/?nature" alt="Nature">
-        <img src="https://source.unsplash.com/600x400/?landscape" alt="Landscape">
-        <img src="https://source.unsplash.com/600x400/?outdoors" alt="Outdoors">
-        <img src="https://source.unsplash.com/600x400/?wildlife" alt="Wildlife">
+        <img src="/pine.heic" alt="Mountain">
+        <img src="/stairs.heic" alt="Forest">
+        <img src="/rideau.heic" alt="Nature">
+        <img src="/chest.heic" alt="Landscape">
+        <img src="/truss.jpg" alt="Outdoors">
+        <img src="/gorge.heic" alt="Wildlife">
+        <img src="/highway.jpg" alt="Wildlife">
+        <img src="/canal.heic" alt="Wildlife">
     </div>
 </body>
 </html>
