--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 </head>
 <body>
     <div class="gallery">
-        <img src="/pine.heic" alt="Mountain">
-        <img src="/stairs.heic" alt="Forest">
-        <img src="/rideau.heic" alt="Nature">
-        <img src="/chest.heic" alt="Landscape">
-        <img src="/truss.jpg" alt="Outdoors">
-        <img src="/gorge.heic" alt="Wildlife">
-        <img src="/highway.jpg" alt="Wildlife">
-        <img src="/canal.heic" alt="Wildlife">
+        <img src="pine.heic" alt="Pine">
+        <img src="stairs.heic" alt="Stairs">
+        <img src="rideau.heic" alt="Rideau">
+        <img src="chest.heic" alt="Chest">
+        <img src="truss.jpg" alt="Truss">
+        <img src="gorge.heic" alt="Gorge">
+        <img src="highway.jpg" alt="Highway">
+        <img src="canal.heic" alt="Canal">
     </div>
 </body>
 </html>
