convert file type

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 </head>
 <body>
     <div class="gallery">
-        <img src="pine.heic" alt="Pine">
-        <img src="stairs.heic" alt="Stairs">
-        <img src="rideau.heic" alt="Rideau">
-        <img src="chest.heic" alt="Chest">
+        <img src="pine.jpg" alt="Pine">
+        <img src="stairs.jpg" alt="Stairs">
+        <img src="rideau.jpg" alt="Rideau">
+        <img src="chest.jpg" alt="Chest">
         <img src="truss.jpg" alt="Truss">
-        <img src="gorge.heic" alt="Gorge">
+        <img src="gorge.jpg" alt="Gorge">
         <img src="highway.jpg" alt="Highway">
-        <img src="canal.heic" alt="Canal">
+        <img src="canal.jpg" alt="Canal">
     </div>
 </body>
 </html>
