--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            padding: 50px 0; /* Added top and bottom margins */
         }
         .gallery {
             display: grid;
@@ -41,8 +42,6 @@
         <img src="pine.jpg" alt="Pine">
         <img src="stairs.jpg" alt="Stairs">
         <img src="rideau.jpg" alt="Rideau">
-        <img src="chest.jpg" alt="Chest">
-        <img src="truss.jpg" alt="Truss">
         <img src="gorge.jpg" alt="Gorge">
         <img src="highway.jpg" alt="Highway">
         <img src="canal.jpg" alt="Canal">
