--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 			<div class="title">
 				<h1 class="font-mask A">ANSON</h1>
 				<h1 class="font-mask B">MOOREY</h1>
-				<div class="image-mask"></div>
+			</div>
+			<div class="sidebar-shapes">
+				<div class="image-mask A"></div>
+				<div class="image-mask B"></div>
+				<div class="image-mask C"></div>
+				<div class="image-mask D"></div>
 			</div>
 			<div class="socials">
 				<a href="https://www.strava.com/athletes/64003317" target="_blank" rel="noopener noreferrer">
