--- a/index.html
+++ b/index.html
@@ -1,40 +1,32 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-</head>
-	<body>
-		<div class="parallax-layer layer1"></div>
-		<div class="parallax-layer layer2"></div>
-		<div class="parallax-layer layer3"></div>
-		<div class="parallax-layer layer4"></div>
-		<main class="content">
-			<div class="title">
-				<h1 class="font-mask A">ANSON</h1>
-				<h1 class="font-mask B">MOOREY</h1>
-			</div>
-			<div class="sidebar-shapes">
-				<div class="image-mask A"></div>
-				<div class="image-mask B"></div>
-				<div class="image-mask C"></div>
-				<div class="image-mask D"></div>
-			</div>
-			<div class="socials">
-				<a href="https://www.strava.com/athletes/64003317" target="_blank" rel="noopener noreferrer">
-					<img src="Assets/strava.png" alt="Strava">
-				</a>
-				<a href="https://www.linkedin.com/in/ansonmoorey/" target="_blank" rel="noopener noreferrer">
-					<img src="Assets/linkedin.png" alt="LinkedIn">
-				</a>
-				<a href="https://www.instagram.com/anson.moorey/" target="_blank" rel="noopener noreferrer">
-					<img src="Assets/instagram.png" alt="Instagram">
-				</a>
-			</div>
-		</main>
-		<script src="script.js"></script>
-	</body>
-</html>
+<main class="layout">
+  <!-- Left Sidebar -->
+  <aside class="sidebar left">
+    <div class="image-mask A"></div>
+    <div class="image-mask B"></div>
+  </aside>
+
+  <!-- Main Column -->
+  <section class="content">
+    <div class="title">
+      <h1 class="font-mask A">ANSON</h1>
+      <h1 class="font-mask B">MOOREY</h1>
+    </div>
+    <div class="socials">
+      <a href="https://www.strava.com/athletes/64003317" target="_blank" rel="noopener noreferrer">
+        <img src="Assets/strava.png" alt="Strava">
+      </a>
+      <a href="https://www.linkedin.com/in/ansonmoorey/" target="_blank" rel="noopener noreferrer">
+        <img src="Assets/linkedin.png" alt="LinkedIn">
+      </a>
+      <a href="https://www.instagram.com/anson.moorey/" target="_blank" rel="noopener noreferrer">
+        <img src="Assets/instagram.png" alt="Instagram">
+      </a>
+    </div>
+  </section>
+
+  <!-- Right Sidebar -->
+  <aside class="sidebar right">
+    <div class="image-mask C"></div>
+    <div class="image-mask D"></div>
+  </aside>
+</main>
