--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 				</div>
 				<div class="socials">
 					<a href="https://www.strava.com/athletes/64003317" target="_blank" rel="noopener noreferrer">
-						<img src="Assets/strava.png" alt="Strava">
+						<img src="Assets/strava.png" alt="Follow me on Strava">
 					</a>
 					<a href="https://www.linkedin.com/in/ansonmoorey/" target="_blank" rel="noopener noreferrer">
-						<img src="Assets/linkedin.png" alt="LinkedIn">
+						<img src="Assets/linkedin.png" alt="Connect with me on LinkedIn">
 					</a>
 					<a href="https://www.instagram.com/anson.moorey/" target="_blank" rel="noopener noreferrer">
-						<img src="Assets/instagram.png" alt="Instagram">
+						<img src="Assets/instagram.png" alt="Follow me on Instagram">
 					</a>
 				</div>
 			</div>
