--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 						<img src="Assets/instagram.png" alt="Follow me on Instagram">
 					</a>
 				</div>
+				<iframe height='160' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/64003317/activity-summary/9ba4bc542a9120864b229ffda958ff7b8d3f331e'></iframe>
+				<div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="ansonmoorey" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://ca.linkedin.com/in/ansonmoorey?trk=profile-badge">Anson Moorey</a></div>
 			</div>
 			<aside class="right-column">
 				<div class="image-mask C"></div>
