--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-	<script src="https://cdn.jsdelivr.net/npm/leaflet-gpx@1.6.0/gpx.min.js"></script>
-
+	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+	<script src="https://unpkg.com/leaflet-gpx"></script> <!-- GPX plugin -->
 </head>
 	<body>
 		<div class="parallax-layer layer1"></div>
