--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 						<img src="Assets/instagram.png" alt="Follow me on Instagram">
 					</a>
 				</div>
-				<div id="map"></div>
+				<div id="map1" class="map" data-gpx="Assets/Madeira.gpx"></div>
+				<div id="map2" class="map" data-gpx="Assets/Trail2.gpx"></div>
+				<div id="map3" class="map" data-gpx="Assets/Trail3.gpx"></div>
 			</div>
 		</main>
 		<script src="script.js"></script>
