--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 						<img src="Assets/instagram.png" alt="Follow me on Instagram">
 					</a>
 				</div>
-				<div id="map1" class="map" data-gpx="Assets/QMT 80.gpx"></div>
-				<div id="map2" class="map" data-gpx="Assets/MIUT 60.gpx"></div>
+				<div id="map1" class="map" data-gpx="Assets/QMT_80.gpx"></div>
+				<div id="map2" class="map" data-gpx="Assets/MIUT_60.gpx"></div>
 				<div id="map3" class="map" data-gpx="Assets/Madeira.gpx"></div>
 			</div>
 		</main>
