--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
 				<div class="map-container">
 				  <div class="map" id="map1" data-gpx="Assets/QMT_80.gpx"></div>
 				  <div class="map-metrics" id="metrics1">
-					<p>Distance: <span class="distance">--</span></p>
-					<p>Time: <span class="time">--</span></p>
-					<p>Elevation Gain: <span class="elevation">--</span></p>
+					<p><span class="distance">--</span></p>
+					<p><span class="time">--</span></p>
+					<p><span class="elevation">--</span></p>
 				  </div>
 				</div>
 
 				<div class="map-container">
 				  <div class="map" id="map2" data-gpx="Assets/MIUT_60.gpx"></div>
 				  <div class="map-metrics" id="metrics2">
-					<p>Distance: <span class="distance">--</span></p>
-					<p>Time: <span class="time">--</span></p>
-					<p>Elevation Gain: <span class="elevation">--</span></p>
+					<p><span class="distance">--</span></p>
+					<p><span class="time">--</span></p>
+					<p><span class="elevation">--</span></p>
 				  </div>
 				</div>
 
 				<div class="map-container">
 				  <div class="map" id="map3" data-gpx="Assets/Madeira.gpx"></div>
 				  <div class="map-metrics" id="metrics3">
-					<p>Distance: <span class="distance">--</span></p>
-					<p>Time: <span class="time">--</span></p>
-					<p>Elevation Gain: <span class="elevation">--</span></p>
+					<p><span class="distance">--</span></p>
+					<p><span class="time">--</span></p>
+					<p><span class="elevation">--</span></p>
 				  </div>
 				</div>
 
