--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
 				<div class="map-container">
 				  <div class="map" id="map1" data-gpx="Assets/QMT_80.gpx"></div>
 				  <div class="map-metrics" id="metrics1">
-					<p><span class="distance">--</span></p>
-					<p><span class="time">--</span></p>
-					<p><span class="elevation">--</span></p>
+					<div class="metric-box"><p><span class="distance">--</span></p></div>
+					<div class="metric-box"><p><span class="time">--</span></p></div>
+					<div class="metric-box"><p><span class="elevation">--</span></p></div>
 				  </div>
 				</div>
 
 				<div class="map-container">
 				  <div class="map" id="map2" data-gpx="Assets/MIUT_60.gpx"></div>
 				  <div class="map-metrics" id="metrics2">
-					<p><span class="distance">--</span></p>
-					<p><span class="time">--</span></p>
-					<p><span class="elevation">--</span></p>
+					<div class="metric-box"><p><span class="distance">--</span></p></div>
+					<div class="metric-box"><p><span class="time">--</span></p></div>
+					<div class="metric-box"><p><span class="elevation">--</span></p></div>
 				  </div>
 				</div>
 
 				<div class="map-container">
 				  <div class="map" id="map3" data-gpx="Assets/Madeira.gpx"></div>
 				  <div class="map-metrics" id="metrics3">
-					<p><span class="distance">--</span></p>
-					<p><span class="time">--</span></p>
-					<p><span class="elevation">--</span></p>
+					<div class="metric-box"><p><span class="distance">--</span></p></div>
+					<div class="metric-box"><p><span class="time">--</span></p></div>
+					<div class="metric-box"><p><span class="elevation">--</span></p></div>
 				  </div>
 				</div>
 
