--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				<div class="map-container">
 				  <div class="map" id="map1" data-gpx="Assets/QMT_80.gpx"></div>
 				  <div class="map-metrics" id="metrics1">
+				    <h2>QMT 80</h2>
 					<div class="metric-box"><p><span class="distance">--</span></p></div>
 					<div class="metric-box"><p><span class="time">--</span></p></div>
 					<div class="metric-box"><p><span class="elevation">--</span></p></div>
@@ -45,6 +46,7 @@
 				<div class="map-container">
 				  <div class="map" id="map2" data-gpx="Assets/MIUT_60.gpx"></div>
 				  <div class="map-metrics" id="metrics2">
+				    <h2>MIUT 60</h2>
 					<div class="metric-box"><p><span class="distance">--</span></p></div>
 					<div class="metric-box"><p><span class="time">--</span></p></div>
 					<div class="metric-box"><p><span class="elevation">--</span></p></div>
@@ -54,6 +56,7 @@
 				<div class="map-container">
 				  <div class="map" id="map3" data-gpx="Assets/Madeira.gpx"></div>
 				  <div class="map-metrics" id="metrics3">
+				    <h2>Madeira Island</h2>
 					<div class="metric-box"><p><span class="distance">--</span></p></div>
 					<div class="metric-box"><p><span class="time">--</span></p></div>
 					<div class="metric-box"><p><span class="elevation">--</span></p></div>
