--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
 					<div class="metric-box"><p><span class="elevation">--</span></p></div>
 				  </div>
 				</div>
+				
+				<div class="map-container">
+				  <div class="map" id="map3" data-gpx="Assets/High_Noon_2024.gpx"></div>
+				  <div class="map-metrics" id="metrics3">
+				    <h2>UpRiver Running High Noon 24hr</h2>
+					<div class="metric-box"><p><span class="distance">--</span></p></div>
+					<div class="metric-box"><p><span class="time">--</span></p></div>
+					<div class="metric-box"><p><span class="elevation">--</span></p></div>
+				  </div>
+				</div>
 
 			</div>
 		</main>
