--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
 					<div class="metric-box"><p><span class="elevation">--</span></p></div>
 				  </div>
 				</div>
-
+				<div class="map-container">
+				  <div class="map" id="map3" data-gpx="Assets/Casque_Isles_Trail.gpx"></div>
+				  <div class="map-metrics" id="metrics3">
+				    <h2>Casque Isles Trail</h2>
+					<div class="metric-box"><p><span class="distance">--</span></p></div>
+					<div class="metric-box"><p><span class="time">--</span></p></div>
+					<div class="metric-box"><p><span class="elevation">--</span></p></div>
+				  </div>
+				</div>
 			</div>
 		</main>
 		<script src="script.js"></script>
