--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 				<div class="map-container">
 				  <div class="map" id="map5" data-gpx="Assets/Casque_Isles_Hike.gpx"></div>
 				  <div class="map-metrics" id="metrics5">
-				    <h2>Casque Isles Trail</h2>
+				    <h2>Casque Isles Backcountry</h2>
 					<div class="metric-box"><p><span class="distance">--</span></p></div>
-					<div class="metric-box"><p><span class="time">--</span></p></div>
+					<div class="metric-box"><p>5d</p></div>
 					<div class="metric-box"><p><span class="elevation">--</span></p></div>
 				  </div>
 				</div>
