--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				  <div class="map-metrics" id="metrics5">
 				    <h2>Casque Isles Backcountry</h2>
 					<div class="metric-box"><p><span class="distance">--</span></p></div>
-					<div class="metric-box"><p>5d</p></div>
+					<div class="metric-box"><p><span>5d</span></p></div>
 					<div class="metric-box"><p><span class="elevation">--</span></p></div>
 				  </div>
 				</div>
