--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				</div>
 				
 				<div class="map-container">
-				  <div class="map" id="map4" data-gpx="Assets/High_Noon_2024.gpx"></div>
+				  <div class="map" id="map4" data-gpx="Assets/High_Noon_2024.gpx" data-weight="2"></div>
 				  <div class="map-metrics" id="metrics4">
 				    <h2>UpRiver Running High Noon 24hr</h2>
 					<div class="metric-box"><p><span class="distance">--</span></p></div>
