--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div class="parallax-layer layer2"></div>
 		<div class="parallax-layer layer3"></div>
 		<div class="parallax-layer layer4"></div>
+		<div class="parallax-layer layer5"></div>
 		<main class="content">
 			<div class ="main-column">
 				<div class="title">
