--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<div class="parallax-layer layer3"></div>
 		<div class="parallax-layer layer4"></div>
 		<div class="parallax-layer layer5"></div>
+		<div class="fog-overlay"></div>
+		<div class="fog-overlay2"></div>
 		<main class="content">
 			<div class ="main-column">
 				<div class="title">
